<resources>
    <string name="app_name">NutriFact</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="signup_text">Don"'"t have an account? <u><font color="#166683">Sign-up here</font></u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="verify_password">Verify Password</string>
    <string name="prof_name">Username</string>
    <string name="ex_email">user@mail.com</string>
    <string name="btn_edtProfile">Edit Profile</string>
    <string name="btn_history">History</string>
    <string name="btn_faq">FAQ</string>
    <string name="btn_logOut">Log Out</string>
    <string name="result">Result</string>
    <string name="home">Home</string>
    <string name="not_found">Item Not Found</string>
    <string name="descrip_notfound">If you want to contribute, select Add New</string>
    <string name="add_new">Add New</string>
    <string name="product_name">Product Name</string>
    <string name="variant">Variant</string>
    <string name="analyze">Analyze</string>
    <string name="nutrition_fact_instruction">Tap to take a picture of the nutrition facts</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="view_all">View All</string>
    <string name="textanalyze">Analyze</string>
    <string name="textTake_a_photo">Take a Photo</string>
    <string name="text_barcode">Barcode : 00239103901238</string>
    <string name="product">Product Name</string>
    <string name="image_nutrition_des">image nutrition</string>
    <string name="no_history">No history please scan some product</string>
    <string name="edit_profile_head">Edit Profile</string>
    <string name="save">Save</string>
    <string name="error_empty_username">Username cannot be empty</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_empty_verify_password">Verify Password cannot be empty</string>
    <string name="error_password_min_length">Password must be at least 8 characters</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="error_empty_field">This field cannot be empty</string>
    <string name="error_format_email">Please enter a valid email address</string>
    <string name="information_nutrition_fact">Please take a picture of the nutrition facts</string>
    <string name="clear_history">Clear History</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="dummy_point">100</string>
    <string name="point_desc">Available Point</string>
    <string name="dummy_welcome">Hello user, welcome to Nutrifact</string>
    <string name="reward">Reward</string>
    <string name="myredeem">My Redeem</string>
    <string name="dummy_point_reward">20 Point</string>
    <string name="dummy_date">12/12/2012 23:00</string>
    <string name="redeem">Redeem</string>
    <string name="no_redeem">Looks like you haven’t redeemed any items yet</string>
    <string name="no_reward">No rewards available at the moment</string>
    <string name="scan_info">Scan the barcode of the product to learn more about it!</string>
    <string name="About">About</string>
    <string name="AboutHead">NutriFact</string>
    <string name="body_about">Nutrifact is an app that grades packaged foods and beverages based on sugar and saturated fat content, categorized using an “A,” “B,” “C,” and “D,” grading system. The aim of the app is to increase consumer awareness of what they are consuming and encourage manufacturers to reformulate products with lower sugar and fat options.\n</string>

    <!--Grade-->
    <string name="grade_a_information">The best choice! This product is highly nutritious and contributes positively to your health. Enjoy it as part of your daily diet with confidence. It is rich in essential nutrients and supports your overall well-being. Regularly choosing products like this can significantly boost your overall nutrition. It is a choice that supports your long-term health and well-being.</string>
    <string name="grade_b_information">A good choice. This product offers balanced nutrition and supports a healthy lifestyle. It’s suitable for regular consumption with minimal concern. While not the absolute best, it provides a good mix of nutrients. Incorporating products like this into your meals promotes a balanced and sustainable diet. It is a dependable option for maintaining good health.</string>
    <string name="grade_c_information">An average choice. Be mindful of your portions to maintain a balanced diet. This product can be enjoyed occasionally but isn’t the healthiest option available. It may contain moderate amounts of less desirable ingredients. Products like this are fine in moderation, but balance is important. Pair them with healthier choices to maintain overall dietary quality.</string>
    <string name="grade_d_information">Needs caution. This product is less balanced in nutrition or high in certain components. Consume sparingly and pair it with healthier options to balance your diet. Overconsumption may contribute to health concerns in the long term. Limiting products like this is a smart move to reduce potential health risks. Focus on selecting more nutritious alternatives when possible.</string>
    <string name="grade_e_information">Be careful! This product has low nutritional value and may not be suitable for frequent consumption. Consider healthier alternatives to support your overall well-being. Regular consumption may negatively impact your health over time. Reducing consumption of products like this can improve your overall health. Choose these sparingly, if at all, for a better lifestyle.</string>


    <!--Error Message-->
    <string name="error_http_login">An error occurred during login</string>
    <string name="error_http_register">An error occurred during registration</string>
    <string name="error_http_product">Product not found</string>
    <string name="error_timeout">The server is not responding. Please try again later.</string>
    <string name="error_connection">Unable to connect to the server. Check your internet connection.</string>
    <string name="error_unexpected">An unexpected error occurred.</string>
    <string name="faq">FAQ</string>

    <!--FAQ-->
    <string name="question1">How can I check the grade of a product?</string>
    <string name="question2">How can I get a point?</string>
    <string name="question3">How can I view my redeem history?</string>
    <string name="question4">How can I find all items that I’ve scanned before?</string>
    <string name="question5">How can I update my profile?</string>
    <string name="answer1">
        1. Go to the Scan page by clicking the Scan navigation button located in the center of the navbar.\n2. Scan the barcode of the product you want to check.\n3. The grade will then appear.
    </string>
    <string name="answer2">
        1. Go to the Scan page by clicking the Scan navigation button located in the center of the navbar.\n2. Scan the barcode of the product.\n3. If a Not Found page appears, click the Add New button.\n4. Scan the nutrition label that you want to add.\n5. If the addition is successful, you will receive 5 points.
    </string>
    <string name="answer3">
        1. Go to the Home page.\n2. On the right side of the Reward text, click on the My Redeem to view your redeem history.
    </string>
    <string name="answer4">
        1. Go to the Home page.\n2. On the right side of the History text, click on the View All to view all of your scan history.
    </string>
    <string name="answer5">
        1. Go to the Profile page through the Profile navigation button.\n2. Click the Edit Profile button.\n3. Enter the information you wish to update, such as your photo profile, username, or password.\n4. Once done, click the Save button to save the changes.
    </string>
</resources>