<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.newnutrition.NewNutrition">

    <TextView
        android:id="@+id/tvBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_onSurface"
        tools:text="@string/text_barcode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfproduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/product"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/md_theme_primary"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBarcode">

        <com.dicoding.nutrifact.custom.CustomEditText
            android:id="@+id/etProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfvariant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/variant"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/md_theme_primary"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfproduct">

        <com.dicoding.nutrifact.custom.CustomEditText
            android:id="@+id/etVariant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/image_nutrition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/all_rounded"
        android:contentDescription="@string/image_nutrition_des"
        app:layout_constraintBottom_toTopOf="@+id/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="@+id/tfvariant"
        app:layout_constraintStart_toStartOf="@+id/tfvariant"
        app:layout_constraintTop_toBottomOf="@id/tfvariant" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_nutrition_fact"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintBottom_toBottomOf="@+id/image_nutrition"
        app:layout_constraintEnd_toEndOf="@+id/image_nutrition"
        app:layout_constraintStart_toStartOf="@+id/image_nutrition"
        app:layout_constraintTop_toTopOf="@+id/image_nutrition" />


    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/md_theme_primary"
        android:text="@string/textTake_a_photo"
        android:textColor="@color/md_theme_onPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAnalyze"
        app:layout_constraintStart_toStartOf="@+id/image_nutrition" />


    <Button
        android:id="@+id/btnAnalyze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/md_theme_primary"
        android:text="@string/textanalyze"
        android:textColor="@color/md_theme_onPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_nutrition"
        app:layout_constraintStart_toEndOf="@id/btnTakePhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>
