<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.notfound.NotFoundActivity">

    <ImageView
        android:id="@+id/image_error"
        android:contentDescription="@string/title_home"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/ic_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_notFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintTop_toBottomOf="@id/image_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_contribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrip_notfound"
        android:textSize="14sp"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintTop_toBottomOf="@id/tv_notFound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/button_home"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/md_theme_primary"
        android:text="@string/title_home"
        android:textColor="@color/md_theme_onPrimary"
        app:layout_constraintEnd_toStartOf="@id/button_add_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contribute" />

    <Button
        android:id="@+id/button_add_new"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/add_new"
        android:textColor="@color/md_theme_onPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_home"
        app:layout_constraintTop_toBottomOf="@id/tv_contribute"/>

</androidx.constraintlayout.widget.ConstraintLayout>