<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_redeem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_primaryContainer">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="70dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvProductReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/product_name" />

        <TextView
            android:id="@+id/tvRewardPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintStart_toStartOf="@+id/tvProductReward"
            app:layout_constraintTop_toBottomOf="@+id/tvProductReward"
            tools:text="@string/dummy_point_reward" />

        <TextView
            android:id="@+id/tvDateRedeem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_outline"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintStart_toStartOf="@+id/tvRewardPoint"
            app:layout_constraintTop_toBottomOf="@+id/tvRewardPoint"
            tools:text="@string/dummy_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>